--- a/app/app/src/main/res/layout/activity_main.xml
+++ b/app/app/src/main/res/layout/activity_main.xml
@@ -4,7 +4,7 @@
     android:id="@+id/activity_main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="ca.team2.crapmap.MapsActivity">
+    tools:context="ca.team2.crapmap.controller.MapsActivity">
 
     <fragment android:id="@+id/map_fragment"
         android:name="com.google.android.gms.maps.SupportMapFragment"
