--- a/app/app/src/main/res/layout/activity_new_comment.xml
+++ b/app/app/src/main/res/layout/activity_new_comment.xml
@@ -9,7 +9,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="ca.team2.crapmap.NewCommentActivity">
+    tools:context="ca.team2.crapmap.controller.NewCommentActivity">
 
         <TextView
             android:id="@+id/tvCleanliness"
