--- a/app/app/src/main/res/layout/activity_preview_bathroom.xml
+++ b/app/app/src/main/res/layout/activity_preview_bathroom.xml
@@ -13,11 +13,21 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
-        android:paddingTop="20dp"
+        android:paddingTop="10dp"
         android:text="bathroom_name"
         android:textAlignment="center"
         android:textSize="20sp"
         android:textStyle="bold" />
+
+    <TextView
+        android:id="@+id/text_travel_time"
+        android:text="@string/label_loading_travel_time"
+        android:textColor="@color/colorBlue"
+        android:textAlignment="center"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/text_bathroom"
+        android:layout_marginTop="5dp" />
 
     <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
@@ -25,7 +35,7 @@
         android:layout_marginBottom="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="18dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
@@ -103,7 +113,7 @@
             android:layout_width="0dp"
             android:layout_height="19dp"
             android:layout_marginTop="25dp"
-            android:text="Cleanliness::"
+            android:text="@string/label_cleanliness"
             android:textAlignment="viewStart"
             android:textSize="14sp"
             app:layout_constraintLeft_toLeftOf="@+id/text_availability"
@@ -118,7 +128,7 @@
             android:layout_width="0dp"
             android:layout_height="19dp"
             android:layout_marginTop="25dp"
-            android:text="Availability:"
+            android:text="@string/label_availability"
             android:textAlignment="viewStart"
             android:textSize="14sp"
             app:layout_constraintLeft_toLeftOf="@+id/text_accessibility"
@@ -136,7 +146,7 @@
             android:layout_marginEnd="11dp"
             android:layout_marginStart="16dp"
             android:layout_marginTop="8dp"
-            android:text="Accessibility:"
+            android:text="@string/label_accessibility"
             android:textAlignment="viewStart"
             android:textSize="14sp"
             app:layout_constraintBottom_toBottomOf="@+id/rating_average_accessibility"
@@ -154,7 +164,7 @@
             android:layout_width="365dp"
             android:layout_height="32dp"
             android:paddingTop="15dp"
-            android:text="Reviews:"
+            android:text="@string/label_reviews"
             android:textColor="@color/common_google_signin_btn_text_light_pressed"
             android:textStyle="bold"
             tools:layout_editor_absoluteX="1dp"
