reload the bathroom object after comment attempt2

--- a/app/app/src/main/res/layout/activity_new_comment.xml
+++ b/app/app/src/main/res/layout/activity_new_comment.xml
@@ -56,6 +56,7 @@
             android:inputType="textMultiLine"
             android:hint="@string/label_comment"
             android:text=""
+            android:gravity="top"
             android:layout_alignBottom="@+id/btSave"
             android:layout_below="@+id/rbAvailability" />
 
