--- a/app/app/src/main/res/layout/activity_preview_bathroom.xml
+++ b/app/app/src/main/res/layout/activity_preview_bathroom.xml
@@ -29,170 +29,126 @@
         android:layout_below="@+id/text_bathroom"
         android:layout_marginTop="5dp" />
 
-    <android.support.constraint.ConstraintLayout
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginBottom="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="18dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:layout_constraintBottom_creator="1"
-        tools:layout_constraintLeft_creator="1"
-        tools:layout_constraintRight_creator="1"
-        tools:layout_constraintTop_creator="1">
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="32dp"
+        android:layout_marginStart="32dp"
+        android:layout_marginTop="10dp"
+        android:layout_below="@+id/text_travel_time"
+        android:orientation="vertical">
 
-        <RatingBar
-            android:id="@+id/rating_average_accessibility"
-            style="@style/Widget.AppCompat.RatingBar.Indicator"
-            android:layout_width="wrap_content"
+        <LinearLayout
+            android:id="@+id/clean_row"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:clickable="false"
-            android:contextClickable="false"
-            android:numStars="5"
-            android:rating="3"
-            android:visibility="visible"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintHorizontal_bias="0.877"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.117"
-            tools:layout_constraintBottom_creator="1"
-            tools:layout_constraintLeft_creator="1"
-            tools:layout_constraintRight_creator="1"
-            tools:layout_constraintTop_creator="1" />
+            android:orientation="horizontal"
+            android:layout_marginBottom="5dp"
+            android:gravity="center">
 
-        <RatingBar
-            android:id="@+id/rating_average_availability"
-            style="@style/Widget.AppCompat.RatingBar.Indicator"
-            android:layout_width="wrap_content"
+            <TextView
+                android:id="@+id/text_cleanliness"
+                android:layout_width="100dp"
+                android:layout_height="fill_parent"
+                android:layout_marginRight="16dp"
+                android:text="@string/label_cleanliness"
+                android:gravity="center"
+                android:textSize="14sp" />
+
+            <RatingBar
+                android:id="@+id/rating_average_cleanliness"
+                style="@style/Widget.AppCompat.RatingBar.Indicator"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:clickable="false"
+                android:contextClickable="false"
+                android:numStars="5"
+                android:rating="3"
+                android:visibility="visible" />
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/avail_row"
+            android:layout_below="@+id/clean_row"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:clickable="false"
-            android:numStars="5"
-            android:rating="3"
-            android:visibility="visible"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintHorizontal_bias="0.877"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.21"
-            tools:layout_constraintBottom_creator="1"
-            tools:layout_constraintLeft_creator="1"
-            tools:layout_constraintRight_creator="1"
-            tools:layout_constraintTop_creator="1" />
+            android:orientation="horizontal"
+            android:layout_marginBottom="5dp"
+            android:gravity="center">
 
-        <RatingBar
-            android:id="@+id/rating_average_cleanliness"
-            style="@style/Widget.AppCompat.RatingBar.Indicator"
-            android:layout_width="wrap_content"
+            <TextView
+                android:id="@+id/text_availability"
+                android:layout_width="100dp"
+                android:layout_height="fill_parent"
+                android:layout_marginRight="16dp"
+                android:text="@string/label_availability"
+                android:gravity="center"
+                android:textSize="14sp" />
+
+            <RatingBar
+                android:id="@+id/rating_average_availability"
+                style="@style/Widget.AppCompat.RatingBar.Indicator"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:clickable="false"
+                android:contextClickable="false"
+                android:numStars="5"
+                android:rating="3"
+                android:visibility="visible" />
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/access_row"
+            android:layout_below="@+id/avail_row"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:clickable="false"
-            android:contextClickable="false"
-            android:longClickable="false"
-            android:numStars="5"
-            android:rating="3"
-            android:visibility="visible"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintHorizontal_bias="0.877"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.303"
-            tools:layout_constraintBottom_creator="1"
-            tools:layout_constraintLeft_creator="1"
-            tools:layout_constraintRight_creator="1"
-            tools:layout_constraintTop_creator="1" />
+            android:orientation="horizontal"
+            android:layout_marginBottom="5dp"
+            android:gravity="center">
 
-        <TextView
-            android:id="@+id/text_cleanliness"
-            android:layout_width="0dp"
-            android:layout_height="19dp"
-            android:layout_marginTop="25dp"
-            android:text="@string/label_cleanliness"
-            android:textAlignment="viewStart"
-            android:textSize="14sp"
-            app:layout_constraintLeft_toLeftOf="@+id/text_availability"
-            app:layout_constraintRight_toRightOf="@+id/text_availability"
-            app:layout_constraintTop_toBottomOf="@+id/text_availability"
-            tools:layout_constraintLeft_creator="1"
-            tools:layout_constraintRight_creator="1"
-            tools:layout_constraintTop_creator="1" />
+            <TextView
+                android:id="@+id/text_accessibility"
+                android:layout_width="100dp"
+                android:layout_height="fill_parent"
+                android:layout_marginRight="16dp"
+                android:text="@string/label_accessibility"
+                android:gravity="center"
+                android:textSize="14sp" />
 
-        <TextView
-            android:id="@+id/text_availability"
-            android:layout_width="0dp"
-            android:layout_height="19dp"
-            android:layout_marginTop="25dp"
-            android:text="@string/label_availability"
-            android:textAlignment="viewStart"
-            android:textSize="14sp"
-            app:layout_constraintLeft_toLeftOf="@+id/text_accessibility"
-            app:layout_constraintRight_toRightOf="@+id/text_accessibility"
-            app:layout_constraintTop_toBottomOf="@+id/text_accessibility"
-            tools:layout_constraintLeft_creator="1"
-            tools:layout_constraintRight_creator="1"
-            tools:layout_constraintTop_creator="1" />
+            <RatingBar
+                android:id="@+id/rating_average_accessibility"
+                style="@style/Widget.AppCompat.RatingBar.Indicator"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:clickable="false"
+                android:contextClickable="false"
+                android:numStars="5"
+                android:rating="3"
+                android:visibility="visible" />
 
-        <TextView
-            android:id="@+id/text_accessibility"
-            android:layout_width="0dp"
-            android:layout_height="0dp"
-            android:layout_marginBottom="8dp"
-            android:layout_marginEnd="11dp"
-            android:layout_marginStart="16dp"
-            android:layout_marginTop="8dp"
-            android:text="@string/label_accessibility"
-            android:textAlignment="viewStart"
-            android:textSize="14sp"
-            app:layout_constraintBottom_toBottomOf="@+id/rating_average_accessibility"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toLeftOf="@+id/rating_average_accessibility"
-            app:layout_constraintTop_toTopOf="@+id/rating_average_accessibility"
-            tools:layout_constraintBottom_creator="1"
-            tools:layout_constraintLeft_creator="1"
-            tools:layout_constraintRight_creator="1"
-            tools:layout_constraintTop_creator="1" />
+        </LinearLayout>
+    </LinearLayout>
 
+    <TextView
+        android:id="@+id/text_reviews"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textAlignment="center"
+        android:layout_marginBottom="5dp"
+        android:layout_above="@+id/review_listView"
+        android:text="@string/label_reviews"
+        android:textStyle="bold" />
 
-        <TextView
-            android:id="@+id/text_reviews"
-            android:layout_width="365dp"
-            android:layout_height="32dp"
-            android:paddingTop="15dp"
-            android:text="@string/label_reviews"
-            android:textColor="@color/common_google_signin_btn_text_light_pressed"
-            android:textStyle="bold"
-            tools:layout_editor_absoluteX="1dp"
-            android:layout_marginTop="11dp"
-            app:layout_constraintTop_toBottomOf="@+id/rating_average_cleanliness" />
-
-        <ListView
-            android:id="@+id/review_listView"
-            android:layout_width="0dp"
-            android:layout_height="274dp"
-            android:layout_marginTop="45dp"
-            android:background="@color/common_google_signin_btn_text_light_default"
-            android:divider="@color/common_google_signin_btn_text_light_disabled"
-            android:footerDividersEnabled="true"
-            android:headerDividersEnabled="true"
-            android:paddingBottom="1dp"
-            android:paddingLeft="1dp"
-            android:paddingRight="1dp"
-            android:paddingTop="1dp"
-            app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/rating_average_cleanliness"
-            tools:layout_constraintLeft_creator="1"
-            tools:layout_constraintRight_creator="1"
-            tools:layout_constraintTop_creator="1" />
-
-    </android.support.constraint.ConstraintLayout>
+    <ListView
+        android:id="@+id/review_listView"
+        android:layout_width="match_parent"
+        android:layout_height="274dp"
+        android:layout_marginLeft="16dp"
+        android:layout_marginRight="16dp"
+        android:layout_marginBottom="10dp"
+        android:layout_alignParentBottom="true" />
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/fab_newComment"
