--- a/app/app/src/main/res/layout/review_row.xml
+++ b/app/app/src/main/res/layout/review_row.xml
@@ -3,27 +3,21 @@
     android:id="@+id/entry_background"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@android:color/black"
     android:orientation="vertical"
-    android:paddingBottom="1dp"
-    android:paddingLeft="1dp"
-    android:paddingRight="1dp"
-    android:paddingTop="1dp">
+    android:paddingBottom="5dp"
+    android:layout_marginBottom="5dp">
 
     <LinearLayout
         android:id="@+id/entry_foreground"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/colorPrimaryDark"
         android:orientation="vertical"
         android:paddingBottom="3dp"
-        android:paddingLeft="3dp"
-        android:paddingRight="3dp"
         android:paddingTop="3dp">
 
         <LinearLayout
             android:id="@+id/review_row_head"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:orientation="horizontal">
 
@@ -32,99 +26,80 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="0.33"
-                android:paddingLeft="3dp"
                 android:text="@string/label_unknown_user"
                 android:textStyle="bold" />
 
-            <TextView
-                android:id="@+id/textView4"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="0.33"
-                android:text="@string/label_accessibility"
-                android:textSize="10sp" />
-
-            <TextView
-                android:id="@+id/textView5"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="0.33"
-                android:text="@string/label_availability"
-                android:textSize="10sp" />
-
-            <TextView
-                android:id="@+id/textView6"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="0.33"
-                android:text="@string/label_cleanliness"
-                android:textSize="10sp" />
-
         </LinearLayout>
 
-        <LinearLayout
-            android:id="@+id/review_row_ratings"
+        <RelativeLayout
+            android:layout_marginTop="5dp"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="horizontal"
-            android:paddingBottom="7dp">
+            android:layout_height="wrap_content">
 
-            <Space
+            <TextView
+                android:id="@+id/text_clean"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_weight="5.07" />
-
-            <RatingBar
-                android:id="@+id/rb_access"
-                style="@style/Widget.AppCompat.RatingBar.Small"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:numStars="5"
-                android:rating="5" />
-
-            <Space
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="1.58" />
-
-            <RatingBar
-                android:id="@+id/rb_avail"
-                style="@style/Widget.AppCompat.RatingBar.Small"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:numStars="5"
-                android:rating="5" />
-
-            <Space
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="0.99" />
+                android:layout_alignParentStart="true"
+                android:text="@string/label_cleanliness"
+                />
 
             <RatingBar
                 android:id="@+id/rb_clean"
                 style="@style/Widget.AppCompat.RatingBar.Small"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_alignParentStart="true"
+                android:layout_below="@+id/text_clean"
                 android:numStars="5"
                 android:rating="5" />
 
-            <Space
+            <TextView
+                android:id="@+id/text_access"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_weight="1.19" />
+                android:layout_centerInParent="true"
+                android:layout_alignParentTop="true"
+                android:text="@string/label_accessibility"
+                />
 
-        </LinearLayout>
+            <RatingBar
+                android:id="@+id/rb_access"
+                style="@style/Widget.AppCompat.RatingBar.Small"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerInParent="true"
+                android:layout_below="@+id/text_clean"
+                android:numStars="5"
+                android:rating="5" />
+
+            <TextView
+                android:id="@+id/text_avail"
+                android:layout_alignParentEnd="true"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/label_availability"
+                />
+
+            <RatingBar
+                android:id="@+id/rb_avail"
+                style="@style/Widget.AppCompat.RatingBar.Small"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentEnd="true"
+                android:layout_below="@+id/text_avail"
+                android:numStars="5"
+                android:rating="5" />
+
+
+        </RelativeLayout>
 
         <LinearLayout
             android:id="@+id/review_row_comment"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="@color/colorBlack"
             android:orientation="horizontal"
-            android:paddingBottom="1dp"
-            android:paddingLeft="1dp"
-            android:paddingRight="1dp"
-            android:paddingTop="1dp">
+            android:paddingTop="5dp">
 
             <TextView
                 android:id="@+id/text_comment"
@@ -132,13 +107,9 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:background="@color/colorPrimaryLight"
-                android:paddingBottom="1dp"
-                android:paddingLeft="2dp"
-                android:paddingRight="1dp"
-                android:paddingTop="1dp"
+                android:padding="5dp"
                 android:text="Sample text sample text sample text sample text sample text "
-                android:textAllCaps="false"
-                android:textColor="@color/common_google_signin_btn_text_light_default" />
+                android:textAllCaps="false" />
         </LinearLayout>
     </LinearLayout>
 
