--- a/app/app/src/main/res/layout/review_row.xml
+++ b/app/app/src/main/res/layout/review_row.xml
@@ -5,7 +5,9 @@
     android:layout_height="wrap_content"
     android:orientation="vertical"
     android:paddingBottom="5dp"
-    android:layout_marginBottom="5dp">
+    android:layout_marginBottom="5dp"
+    android:paddingLeft="16dp"
+    android:paddingRight="16dp">
 
     <LinearLayout
         android:id="@+id/entry_foreground"
