fiddle with layouts to fix FAB shadow clipping

--- a/app/app/src/main/res/layout/activity_new_bathroom.xml
+++ b/app/app/src/main/res/layout/activity_new_bathroom.xml
@@ -1,19 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/activity_new_bathroom"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
+    android:layout_marginTop="@dimen/activity_vertical_margin"
     tools:context="ca.team2.crapmap.controller.NewBathroomActivity">
 
     <android.support.design.widget.TextInputLayout
         android:id="@+id/new_bathroom_name_layout"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="@dimen/activity_horizontal_margin"
+        android:layout_marginRight="@dimen/activity_horizontal_margin">
+
         <EditText
             android:id="@+id/new_bathroom_name"
             android:hint="@string/prompt_bathroom_name"
@@ -23,182 +24,195 @@
             android:singleLine="true" />
     </android.support.design.widget.TextInputLayout>
 
-    <CheckBox
-        android:id="@+id/new_bathroom_requires_purchase"
-        android:text="@string/label_requires_purchase"
-        android:layout_width="wrap_content"
+    <RelativeLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/new_bathroom_name_layout"/>
-    <TextView
-        android:id="@+id/hours"
-        android:text="@string/label_hours"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:layout_below="@+id/new_bathroom_requires_purchase"
-        android:textColor="@color/colorBlack"
-        android:layout_marginTop="20dp"
-        android:layout_marginBottom="20dp"/>
-    <CheckBox
-        android:id="@+id/monday"
-        android:text="@string/label_monday"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/hours"/>
-    <TextView
-        android:id="@+id/mondayStart"
-        android:hint="Open"
-        android:layout_marginTop="4dp"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/hours"
-        android:layout_marginLeft="150dp"/>
-    <TextView
-        android:id="@+id/mondayEnd"
-        android:hint="Close"
-        android:layout_marginTop="4dp"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/hours"
-        android:layout_marginLeft="250dp"/>
-    <CheckBox
-        android:id="@+id/tuesday"
-        android:text="@string/label_tuesday"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/monday"/>
-    <TextView
-        android:id="@+id/tuesdayStart"
-        android:hint="Open"
-        android:layout_marginTop="4dp"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/monday"
-        android:layout_marginLeft="150dp"/>
-    <TextView
-        android:id="@+id/tuesdayEnd"
-        android:hint="Close"
-        android:layout_marginTop="4dp"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/monday"
-        android:layout_marginLeft="250dp"/>
-    <CheckBox
-        android:id="@+id/wednesday"
-        android:text="@string/label_wednesday"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/tuesday"/>
-    <TextView
-        android:id="@+id/wednesdayStart"
-        android:hint="Open"
-        android:layout_marginTop="4dp"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/tuesday"
-        android:layout_marginLeft="150dp"/>
-    <TextView
-        android:id="@+id/wednesdayEnd"
-        android:hint="Close"
-        android:layout_marginTop="4dp"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/tuesday"
-        android:layout_marginLeft="250dp"/>
-    <CheckBox
-        android:id="@+id/thursday"
-        android:text="@string/label_thursday"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/wednesday"/>
-    <TextView
-        android:id="@+id/thursdayStart"
-        android:hint="Open"
-        android:layout_marginTop="4dp"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/wednesday"
-        android:layout_marginLeft="150dp"/>
-    <TextView
-        android:id="@+id/thursdayEnd"
-        android:hint="Close"
-        android:layout_marginTop="4dp"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/wednesday"
-        android:layout_marginLeft="250dp"/>
-    <CheckBox
-        android:id="@+id/friday"
-        android:text="@string/label_friday"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/thursday"/>
-    <TextView
-        android:id="@+id/fridayStart"
-        android:hint="Open"
-        android:layout_marginTop="4dp"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/thursday"
-        android:layout_marginLeft="150dp"/>
-    <TextView
-        android:id="@+id/fridayEnd"
-        android:hint="Close"
-        android:layout_marginTop="4dp"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/thursday"
-        android:layout_marginLeft="250dp"/>
-    <CheckBox
-        android:id="@+id/saturday"
-        android:text="@string/label_saturday"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/friday"/>
-    <TextView
-        android:id="@+id/saturdayStart"
-        android:hint="Open"
-        android:layout_marginTop="4dp"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/friday"
-        android:layout_marginLeft="150dp"/>
-    <TextView
-        android:id="@+id/saturdayEnd"
-        android:hint="Close"
-        android:layout_marginTop="4dp"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/friday"
-        android:layout_marginLeft="250dp"/>
-    <CheckBox
-        android:id="@+id/sunday"
-        android:text="@string/label_sunday"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/saturday"/>
-    <TextView
-        android:id="@+id/sundayStart"
-        android:hint="Open"
-        android:layout_marginTop="4dp"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/saturday"
-        android:layout_marginLeft="150dp"/>
-    <TextView
-        android:id="@+id/sundayEnd"
-        android:hint="Close"
-        android:layout_marginTop="4dp"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/saturday"
-        android:layout_marginLeft="250dp"/>
+        android:layout_below="@id/new_bathroom_name_layout"
+        android:layout_marginLeft="@dimen/activity_horizontal_margin"
+        android:layout_marginRight="@dimen/activity_horizontal_margin">
+
+        <CheckBox
+            android:id="@+id/new_bathroom_requires_purchase"
+            android:text="@string/label_requires_purchase"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/new_bathroom_name_layout"/>
+        <TextView
+            android:id="@+id/hours"
+            android:text="@string/label_hours"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerHorizontal="true"
+            android:layout_below="@+id/new_bathroom_requires_purchase"
+            android:textColor="@color/colorBlack"
+            android:layout_marginTop="20dp"
+            android:layout_marginBottom="20dp"/>
+        <CheckBox
+            android:id="@+id/monday"
+            android:text="@string/label_monday"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/hours"/>
+        <TextView
+            android:id="@+id/mondayStart"
+            android:hint="Open"
+            android:layout_marginTop="4dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/hours"
+            android:layout_marginLeft="150dp"/>
+        <TextView
+            android:id="@+id/mondayEnd"
+            android:hint="Close"
+            android:layout_marginTop="4dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/hours"
+            android:layout_marginLeft="250dp"/>
+        <CheckBox
+            android:id="@+id/tuesday"
+            android:text="@string/label_tuesday"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/monday"/>
+        <TextView
+            android:id="@+id/tuesdayStart"
+            android:hint="Open"
+            android:layout_marginTop="4dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/monday"
+            android:layout_marginLeft="150dp"/>
+        <TextView
+            android:id="@+id/tuesdayEnd"
+            android:hint="Close"
+            android:layout_marginTop="4dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/monday"
+            android:layout_marginLeft="250dp"/>
+        <CheckBox
+            android:id="@+id/wednesday"
+            android:text="@string/label_wednesday"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/tuesday"/>
+        <TextView
+            android:id="@+id/wednesdayStart"
+            android:hint="Open"
+            android:layout_marginTop="4dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/tuesday"
+            android:layout_marginLeft="150dp"/>
+        <TextView
+            android:id="@+id/wednesdayEnd"
+            android:hint="Close"
+            android:layout_marginTop="4dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/tuesday"
+            android:layout_marginLeft="250dp"/>
+        <CheckBox
+            android:id="@+id/thursday"
+            android:text="@string/label_thursday"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/wednesday"/>
+        <TextView
+            android:id="@+id/thursdayStart"
+            android:hint="Open"
+            android:layout_marginTop="4dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/wednesday"
+            android:layout_marginLeft="150dp"/>
+        <TextView
+            android:id="@+id/thursdayEnd"
+            android:hint="Close"
+            android:layout_marginTop="4dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/wednesday"
+            android:layout_marginLeft="250dp"/>
+        <CheckBox
+            android:id="@+id/friday"
+            android:text="@string/label_friday"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/thursday"/>
+        <TextView
+            android:id="@+id/fridayStart"
+            android:hint="Open"
+            android:layout_marginTop="4dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/thursday"
+            android:layout_marginLeft="150dp"/>
+        <TextView
+            android:id="@+id/fridayEnd"
+            android:hint="Close"
+            android:layout_marginTop="4dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/thursday"
+            android:layout_marginLeft="250dp"/>
+        <CheckBox
+            android:id="@+id/saturday"
+            android:text="@string/label_saturday"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/friday"/>
+        <TextView
+            android:id="@+id/saturdayStart"
+            android:hint="Open"
+            android:layout_marginTop="4dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/friday"
+            android:layout_marginLeft="150dp"/>
+        <TextView
+            android:id="@+id/saturdayEnd"
+            android:hint="Close"
+            android:layout_marginTop="4dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/friday"
+            android:layout_marginLeft="250dp"/>
+        <CheckBox
+            android:id="@+id/sunday"
+            android:text="@string/label_sunday"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/saturday"/>
+        <TextView
+            android:id="@+id/sundayStart"
+            android:hint="Open"
+            android:layout_marginTop="4dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/saturday"
+            android:layout_marginLeft="150dp"/>
+        <TextView
+            android:id="@+id/sundayEnd"
+            android:hint="Close"
+            android:layout_marginTop="4dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/saturday"
+            android:layout_marginLeft="250dp"/>
+
+    </RelativeLayout>
+
+
+
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/new_bathroom_submit"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="bottom|end"
         android:layout_alignParentBottom="true"
         android:layout_alignParentEnd="true"
+        android:layout_margin="16dp"
+        android:layout_gravity="bottom|end"
         android:src="@drawable/ic_done_white_24dp" />
 </RelativeLayout>
