--- a/app/app/src/main/res/layout/activity_new_comment.xml
+++ b/app/app/src/main/res/layout/activity_new_comment.xml
@@ -5,10 +5,8 @@
     android:id="@+id/actNewComment"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
+    android:paddingLeft="@dimen/activity_horizontal_margin"
     tools:context="ca.team2.crapmap.controller.NewCommentActivity">
 
         <TextView
@@ -26,6 +24,7 @@
             android:numStars="5"
             android:stepSize="1"
             android:rating="0"
+            android:layout_marginRight="16dp"
             android:layout_alignParentTop="true"
             android:layout_alignParentEnd="true" />
 
@@ -66,6 +65,7 @@
             android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
             android:layout_alignParentEnd="true"
+            android:layout_margin="@dimen/fab_margin"
             android:src="@drawable/ic_done_white_24dp" />
 
         <RatingBar
@@ -74,6 +74,7 @@
             android:layout_height="wrap_content"
             android:layout_alignStart="@+id/rbCleanliness"
             android:layout_below="@+id/rbCleanliness"
+            android:layout_marginRight="16dp"
             android:numStars="5"
             android:stepSize="1" />
 
@@ -83,6 +84,7 @@
             android:layout_height="wrap_content"
             android:layout_alignStart="@+id/rbAccessibility"
             android:layout_below="@+id/rbAccessibility"
+            android:layout_marginRight="16dp"
             android:numStars="5"
             android:stepSize="1" />
 
